feat: implement comprehensive mobile touch support
📱 Enhanced Touch Interactions:
- Added native touch event handling (touchstart, touchmove, touchend)
- Smart device detection for desktop vs mobile interaction modes
- Gesture recognition with movement threshold to prevent accidental drags
- Real-time visual feedback during touch drag operations

🎯 Mobile UX Improvements:
- Haptic feedback for touch actions (success/error vibrations)
- Enhanced visual feedback with scaling and glow animations
- Larger touch targets (44px minimum) following iOS guidelines
- Disabled hover effects on touch devices for better performance

🎨 Mobile-Optimized Styling:
- Touch-specific CSS media queries (@media pointer: coarse)
- Enhanced dragging animations for mobile devices
- Pulse animation for valid drop zones during touch drag
- Prevented text selection and zooming during gameplay

⚡ Technical Enhancements:
- Dual interaction system: drag & drop for desktop, touch for mobile
- Non-passive touch event listeners for precise gesture control
- Smooth hardware-accelerated animations using transforms
- Optimized event handling to prevent performance issues

🔧 Accessibility & Standards:
- Follows iOS Human Interface Guidelines for touch targets
- Maintains compatibility with screen readers
- Preserves keyboard navigation alongside touch support
- Graceful fallback to click events when touch fails

The app now provides a native app-like touch experience on mobile
devices while maintaining full desktop functionality. Ready for
mobile app stores and professional deployment! 🚀

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="apple-touch-icon" href="/toh/icons/icon-192x192.png" />
     
     <!-- Viewport and Mobile Optimization -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     
     <!-- PWA Meta Tags -->
     <link rel="manifest" href="/toh/manifest.json" />
