--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
   <meta name="description" content="Monochrome Tower of Hanoi puzzle" />
   <!-- use relative paths so Vite base '/toh/' does not duplicate -->
   <link rel="manifest" href="manifest.json" />
-  <link rel="icon" type="image/svg+xml" href="icons/icon.svg" />
+  <!-- Replaced missing icon.svg with existing icons -->
+  <link rel="icon" type="image/svg+xml" href="icons/icon-mono.svg" />
+  <link rel="alternate icon" href="icons/icon-simple.svg" type="image/svg+xml" />
+  <link rel="mask-icon" href="icons/icon-mask.svg" color="#000000" />
+  <!-- Optional PWA Apple touch (reuses mask svg) -->
+  <link rel="apple-touch-icon" href="icons/icon-mask.svg" />
   <meta http-equiv="X-Content-Type-Options" content="nosniff" />
   <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin" />
   <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; connect-src 'self'; font-src 'self'; object-src 'none'; base-uri 'self'; frame-ancestors 'none';" />
